--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,12 +1,13 @@
 <h1 class="htitle">{{title}}</h1>
 <div class="row">
-<div class="col-md-4" *ngFor="let p of listProducts" >
+<div class="col-md-4" *ngFor="let p of listProducts,let i=index" >
 <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{p.title}}</h5>
     <p class="card-text">Price: {{p.price}}, Quantity: {{p.quantity}}</p>
-    <a href="#" class="btn btn-primary">Like {{p.like}}</a>
+    <a href="#" class="btn btn-primary" style="margin: 0.1em" (click)="like(i)">Like {{p.like}}</a>
+    <a href="#" class="btn btn-primary" (click)="buy(i)">Buy</a>
   </div>
 </div>
 </div>
