--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,13 +1,17 @@
 <h1 class="htitle">{{title}}</h1>
-<div class="row">
+<div class="input-group input-group-sm mb-3" style="width: 20%;margin-left: 1em">
+  <span class="input-group-text" id="inputGroup-sizing-sm">chercher</span>
+  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+</div>
+<div class="row" style="margin-left: 1em">
 <div class="col-md-4" *ngFor="let p of listProducts,let i=index" >
 <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{p.title}}</h5>
     <p class="card-text">Price: {{p.price}}, Quantity: {{p.quantity}}</p>
-    <a href="#" class="btn btn-primary" style="margin: 0.1em" (click)="like(i)">Like {{p.like}}</a>
-    <a href="#" class="btn btn-primary" (click)="buy(i)">Buy</a>
+    <button type="button" class="btn btn-primary"  style="margin: 0.1em" (click)="like(i)">Like {{p.like}}</button>
+    <button type="button" class="btn btn-primary"  (click)="buy(i)" [disabled]="p.quantity<=0">Buy</button>
   </div>
 </div>
 </div>
