--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,7 +6,7 @@
 <div class="row" style="margin-left: 1em">
 <div class="col-md-4" *ngFor="let p of listProducts,let i=index" >
 <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{p.title}}</h5>
     <p class="card-text">Price: {{p.price}}, Quantity: {{p.quantity}}</p>
