--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,18 +1,34 @@
 <h1 class="htitle">{{title}}</h1>
-<div class="input-group input-group-sm mb-3" style="width: 20%;margin-left: 1em">
-  <span class="input-group-text" id="inputGroup-sizing-sm">chercher</span>
-  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-</div>
+<input type="number" name="price" [(ngModel)]="priceMax" >
 <div class="row" style="margin-left: 1em">
 <div class="col-md-4" *ngFor="let p of listProducts,let i=index" >
+  <div *ngIf="p.price<=priceMax||priceMax==null">
 <div class="card" style="width: 18rem;">
   <img src="" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{p.title}}</h5>
-    <p class="card-text">Price: {{p.price}}, Quantity: {{p.quantity}}</p>
-    <button type="button" class="btn btn-primary"  style="margin: 0.1em" (click)="like(i)">Like {{p.like}}</button>
-    <button type="button" class="btn btn-primary"  (click)="buy(i)" [disabled]="p.quantity<=0">Buy</button>
+    <div class="fs-4 mb-3">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-seam" viewBox="0 0 16 16">
+        <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"></path>
+      </svg>
+      Quantity: {{p.quantity}}
+    </div>
+    <div class="fs-4 mb-3">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags" viewBox="0 0 16 16">
+        <path d="M3 2v4.586l7 7L14.586 9l-7-7H3zM2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2z"></path>
+        <path d="M5.5 5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm0 1a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM1 7.086a1 1 0 0 0 .293.707L8.75 15.25l-.043.043a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 0 7.586V3a1 1 0 0 1 1-1v5.086z"></path>
+      </svg>
+      Price: {{p.price}}
+    </div>
+    <button type="button" class="btn btn-danger"  style="margin: 0.1em" (click)="like(i)">{{p.like}} Like</button>
+    <button type="button" class="btn btn-primary" (click)="buy(i)" [disabled]="p.quantity<=0">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+        <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"></path>
+      </svg>
+      Buy
+    </button>
   </div>
+</div>
 </div>
 </div>
 </div>
