--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,10 +10,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/products">Product</a>
+          <a class="nav-link" routerLink="/products">Product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/offres">Offres</a>
+          <a class="nav-link" routerLink="/offres">Offres</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
