--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -36,5 +36,6 @@
 </div>
 </div>
 
-
+<button type="button" class="btn btn-secondary btn-lg" (click)="calde0()">vérifier</button>
+quantity={{emG}}
 
