--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,6 +19,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/offres">Offres</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/todo">To Do</a>
+        </li>
 
       </ul>
       <form class="d-flex" role="search">
